<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/ly_games_m"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/ly_buttons_m"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textv_title_m"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/str_app_title"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="36sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textv_greeting_user_m"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textv_score_m"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:textAlignment="center"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btn_ttt_m"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/str_title_ttt"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="16dp" />

        <Button
            android:id="@+id/btn_hm_m"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/str_title_hm"
            tools:layout_editor_absoluteX="15dp"
            tools:layout_editor_absoluteY="72dp" />

        <Button
            android:id="@+id/btn_ttb_m"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/str_title_ttb"
            tools:layout_editor_absoluteX="14dp"
            tools:layout_editor_absoluteY="135dp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/ly_buttons_m"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ly_games_m">

        <LinearLayout
            android:id="@+id/ly_buttons_up_m"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_gamestatistic_m"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="3dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:text="@string/str_textv_gamestatistic_stat"
                tools:layout_editor_absoluteX="14dp"
                tools:layout_editor_absoluteY="135dp" />

            <Button
                android:id="@+id/btn_settings_m"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="3dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:text="@string/str_settings"
                tools:layout_editor_absoluteX="14dp"
                tools:layout_editor_absoluteY="135dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ly_buttons_down_m"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_help_m"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="3dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:text="@string/str_help"
                tools:layout_editor_absoluteX="14dp"
                tools:layout_editor_absoluteY="135dp" />

            <Button
                android:id="@+id/btn_switch_lang_m"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="3dp"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:text="@string/str_switch_lang"
                tools:layout_editor_absoluteX="14dp"
                tools:layout_editor_absoluteY="135dp" />

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>