...
            android:text="@string/str_textv_win_hm"
            android:textAlignment="center"
            android:textColor="@color/colorBlack"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btn_reset_hm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_reset"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textSize="18sp" />

...
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/ly_image_hm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ly_title_hm">

        <Button
            android:id="@+id/btn_back_hm"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/str_back"
...
